2006-01-08  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Changed kahua-current-user to use kahua-find-user.

	* src/kahua/user.scm:
	Removed add-user check-user find-user user-password-change \
	        user-password-change-force user-has-role?.
	Added <kahua-user-meta>.
	Changed <kahua-user> to use <kahua-user-meta> meta class.

2006-01-08  TAHARA Yusei  <yusei@domen.cx>

	* src/kahua/serialize.scm:
	Added kahua.serialize module.

2006-01-08  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Added and Exported apply-entry-method.
	Added define-method-rule.
	Changed define-entry-method to use define-method-rule instead of define-method.
	Changed serialized object's delimiter to "\0".

2006-01-07  SHIBATA Tomohisa  <shibata@kahua.org>

	* Release 0.3.5

2006-01-06  SHIBATA Tomohisa  <shibata@kahua.org>

	* test/persistence.scm:
	Added multi mixin-metaclass test.

	* src/kahua/persistence.scm:
	Changed to call next-method in compute-get-n-set of <kahua-persistent-meta>.
	Added kahua-wrapper? proc.


2005-12-30  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/test/worker.scm, test/entry-method.scm.in:
	Added set-gsid proc which restore worker's global session by matching id.

	* test/Makefile.in
	Renamed *.scm.in file to *.scm
	
2005-12-29  SHIBATA Tomohisa  <shibata@kahua.org>

	* doc/Modules/kahua.persistence.ja:
	Added persistent-initialize method document.

	* src/kahua/persistence.scm:
	Added persistent-initialize method to <kahua-persistent-base>.

	* test/persistence.scm.in:
	Added initialize and persistent-initialize method test.

2005-12-26  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/test/worker.scm:
	added header->sxml and test/send&pick.
	Changed make-match&pick to save query.

	* src/kahua/server.scm:
	Added redirect/cont.
	Fixed remote-cont fragment.

	* test/Makefile.in, test/redirectcont.kahua, test/redirectcont.scm.in:
	Added redirect/cont test.

2005-12-25  SHIBATA Tomohisa  <shibata@kahua.org>
