@@ -1,0 +1,9 @@
+;; -*- coding: euc-jp ; mode: scheme -*-
+
+(define-entry (many-as)
+  (node-set:
+   (html: (head: (title: "many-as"))
+	  (body: (@: (bgcolor "white"))
+		 (p: (make-string 1000000 #\a))))))
+		 
+(initialize-main-proc many-as)
